chore: findCurrentRanks 성공 케이스 추가 (#217)